// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when user looks at another user profile renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-47 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-2-87"
  >
    <div
      currentUser={
        Object {
          "id": 1234,
        }
      }
      editPath={false}
      imageUrl={undefined}
      name="foo-name foo-last"
    >
      Avatar
    </div>
    <div
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <h4
        className="MuiTypography-root-98 MuiTypography-h4-113"
        style={
          Object {
            "marginBottom": 16,
            "marginTop": 16,
          }
        }
      >
        foo-name foo-last
      </h4>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-51 MuiGrid-grid-md-8-65 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-10-95"
  >
    <div
      className="MuiPaper-root-163 MuiPaper-elevation1-166 MuiPaper-rounded-164 MuiCard-root-162"
    >
      <div
        className="MuiCardContent-root-190"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Website"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Bio"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Organização"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cargo"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cidade"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Estado"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="País"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/users/4321/messages/new"
        >
          <button
            className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-134"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-191"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      parentId={1234}
      showDestroy={false}
    >
      Album
    </div>
  </div>
</div>
`;

exports[`when user looks at her own profile renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-47 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-2-87"
  >
    <div
      currentUser={
        Object {
          "id": 1234,
        }
      }
      editPath="/profile/avatar"
      imageUrl={undefined}
      name="foo-name foo-last"
    >
      Avatar
    </div>
    <div
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <h4
        className="MuiTypography-root-98 MuiTypography-h4-113"
        style={
          Object {
            "marginBottom": 16,
            "marginTop": 16,
          }
        }
      >
        foo-name foo-last
      </h4>
      <div
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/profile/edit"
      >
        <button
          className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-134"
          >
            Editar perfil
          </span>
          <span
            className="MuiTouchRipple-root-191"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-51 MuiGrid-grid-md-8-65 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-10-95"
  >
    <div
      className="MuiPaper-root-163 MuiPaper-elevation1-166 MuiPaper-rounded-164 MuiCard-root-162"
    >
      <div
        className="MuiCardContent-root-190"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Email"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Website"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Bio"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Organização"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cargo"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Cidade"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="Estado"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
          title="País"
          value={undefined}
        >
          PropertyWithValue
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/users/1234/messages/new"
        >
          <button
            className="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-contained-144 MuiButton-containedPrimary-145 MuiButton-raised-147 MuiButton-raisedPrimary-148"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-134"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-191"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      parentId={1234}
      showDestroy={true}
    >
      Album
    </div>
  </div>
</div>
`;
